examples/test/testpolicy18752.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18752
  namespace: namespace236
spec:
  podSelector:
    matchLabels:
      key24: value16
      key15: value8
      key7: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value47
          key2: value32
      podSelector:
        matchLabels:
          key43: value17
          key16: value2
          key38: value20
